// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalletSelector should render correctly if for buy offer 1`] = `
<WalletLabel
  address="bcrt1q70z7vw93cxs6jx7nav9cmcn5qvlv362qfudnqmz9fnk2hjvz5nus4c0fuh"
/>
`;

exports[`WalletSelector should render correctly if for buy offer draft 1`] = `
<SelectWallet
  type="payout"
/>
`;

exports[`WalletSelector should render correctly if for sell offer 1`] = `
<WalletLabel
  address="bcrt1q70z7vw93cxs6jx7nav9cmcn5qvlv362qfudnqmz9fnk2hjvz5nus4c0fuh"
/>
`;

exports[`WalletSelector should render correctly if for sell offer draft 1`] = `
<SelectWallet
  type="refund"
/>
`;
